// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default component render 1`] = `
<div>
  <ReduxForm
    destroyOnUnmount={true}
    displayOnly={false}
    enableReinitialize={true}
    forceUnregisterOnUnmount={false}
    form="rfpOptions"
    getFormState={[Function]}
    keepDirtyOnReinitialize={false}
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldError={[Function]}
    shouldValidate={[Function]}
    shouldWarn={[Function]}
    submitAsSideEffect={false}
    touchOnBlur={true}
    touchOnChange={false}
    updateUnregisteredFields={false}
  />
  <Component
    displayOnly={false}
  />
</div>
`;

exports[`Rfp finished status 1`] = `
<div>
  <ReduxForm
    destroyOnUnmount={true}
    displayOnly={true}
    enableReinitialize={true}
    forceUnregisterOnUnmount={false}
    form="rfpOptions"
    getFormState={[Function]}
    keepDirtyOnReinitialize={false}
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldError={[Function]}
    shouldValidate={[Function]}
    shouldWarn={[Function]}
    submitAsSideEffect={false}
    touchOnBlur={true}
    touchOnChange={false}
    updateUnregisteredFields={false}
  />
  <Component
    displayOnly={true}
  />
</div>
`;

exports[`Rfp running status 1`] = `
<div>
  <ReduxForm
    destroyOnUnmount={true}
    displayOnly={true}
    enableReinitialize={true}
    forceUnregisterOnUnmount={false}
    form="rfpOptions"
    getFormState={[Function]}
    keepDirtyOnReinitialize={false}
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldError={[Function]}
    shouldValidate={[Function]}
    shouldWarn={[Function]}
    submitAsSideEffect={false}
    touchOnBlur={true}
    touchOnChange={false}
    updateUnregisteredFields={false}
  />
  <Component
    displayOnly={true}
  />
</div>
`;
